<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="100"
    android:background="@drawable/musicactivity_backgroud"
    android:baselineAligned="true"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/layout_music_l" 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <LinearLayout
            android:id="@+id/layout_music_l_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical" >

        	 <ImageView
        	     android:id="@+id/image_music_rotate"
        	     android:layout_width="wrap_content"
        	     android:layout_height="wrap_content"
        	     android:layout_gravity="center"
        	     android:layout_marginLeft="0dp"
        	     android:layout_marginRight="35dp"
        	     android:layout_marginTop="40dp"
        	     android:src="@drawable/circle" >

       		 </ImageView> 
    	</LinearLayout>

        <LinearLayout
            android:id="@+id/layout_music_l_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" 
            android:layout_gravity="center">

         <Button
             android:id="@+id/button_music_mode"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginBottom="25dp"
             android:layout_marginLeft="90dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="25dp"
             android:background="@drawable/mode" />

         <Button
             android:id="@+id/button_music_previous"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="25dp"
             android:background="@drawable/previous" />

         <Button
             android:id="@+id/button_music_contral"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="25dp"
             android:background="@drawable/play" />

         <Button
             android:id="@+id/button_music_next"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="25dp"
             android:background="@drawable/next" />

         <Button
             android:id="@+id/button_music_voice"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="25dp"
             android:background="@drawable/voice" />
         
        </LinearLayout>

   	 	<LinearLayout
   	 	    android:id="@+id/layout_music_l_3"
   	 	    android:layout_width="match_parent"
   	 	    android:layout_height="0dp"
   	 	    android:layout_weight="1"
   	 	    android:orientation="horizontal"
   	 	    android:layout_gravity="center"
   	 	    >

         <TextView
             android:id="@+id/text_music_rtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginLeft="70dp"
             android:text="00:00"
             android:textSize="25dp" />

         <ProgressBar 
             android:id="@+id/pgb_music"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_gravity="center"
             android:max="100"
             android:progress="0"/>
         <TextView 
             android:id="@+id/text_music_ttime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="04:17"
             android:textSize="25sp"
             android:layout_gravity="center"
             />
    	</LinearLayout>
    
    </LinearLayout>
    
    
    
    <LinearLayout
        android:id="@+id/layout_music_r" 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="15dp"
       >

   	 	<LinearLayout
   	 	    android:id="@+id/layout_music_r_0"
   	 	    android:layout_width="match_parent"
   	 	    android:layout_height="0dp"
   	 	    android:layout_gravity="center|right"
   	 	    android:layout_weight="1"
   	 	    android:gravity="center"
   	 	    android:orientation="vertical" >

        	<TextView 
             android:id="@+id/text_music_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_music_time"
             android:textColor="@drawable/black"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:textSize="18sp"
             />
        </LinearLayout>
        
   	 	<LinearLayout
   	 	    android:id="@+id/layout_music_r_1"
   	 	    android:layout_width="match_parent"
   	 	    android:layout_height="0dp"
   	 	    android:layout_weight="2"
   	 	    android:gravity="left|center"
   	 	    android:orientation="vertical" >

         <TextView
             android:id="@+id/textView_music_songname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/text_music_songname"
             android:textColor="@color/white"
             android:textSize="30sp" />

         <TextView
             android:id="@+id/textView_music_singer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_music_singer"
             android:textColor="@color/white"
             android:textSize="22sp" />

    	</LinearLayout>
    	<LinearLayout
    	    android:id="@+id/layout_music_r_2"
    	    android:layout_width="match_parent"
    	    android:layout_height="0dp"
    	    android:layout_weight="5"
    	    android:orientation="horizontal" >

         <TextView
             android:id="@+id/text_music_lyric"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="5"
             android:lineSpacingExtra="4dp"
             android:text="@string/text_lyrics"
             android:textColor="@drawable/white"
             android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_music_r_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

    	</LinearLayout>
    </LinearLayout>
</LinearLayout>
